# TinyMat

./: .gitignore  CMakeLists.txt  Mat.cpp  Mat.hpp  main.cpp
include/: Mat.hpp
src/: Mat.cpp  main.cpp
